--- a/SoftRenderer/SoftRenderer/Form1.resx
+++ b/SoftRenderer/SoftRenderer/Form1.resx
@@ -123,4 +123,13 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
   </metadata>
+  <data name="richTextBox1.Text" xml:space="preserve">
+    <value>当PictureBox控件有焦点是你可以控制:
+ - 鼠标滚轮控制镜头远近
+ - 按住鼠标右键不放的同时再用W,S,A,D控制镜头的移动
+
+When the PictureBox control has focus you can control:
+- mouse wheel controls the distance of the lens
+- while holding the right mouse button down, use W,S,A,D to control the lens movement</value>
+  </data>
 </root>
